--- a/src/main/resources/com/example/projetointegracao/view/product-page.fxml
+++ b/src/main/resources/com/example/projetointegracao/view/product-page.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="TOP_LEFT" prefHeight="399.0" prefWidth="399.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projetointegracao.controllers.ProductController">
+<VBox alignment="TOP_LEFT" prefHeight="399.0" prefWidth="399.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projetointegracao.controllers.ViewController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
